syntax = "proto3";

package task.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/aliirah/task-flow/shared/proto/task/v1;taskpb";

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (Task);
  rpc GetTask(GetTaskRequest) returns (Task);
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (Task);
  rpc DeleteTask(DeleteTaskRequest) returns (google.protobuf.Empty);
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  string priority = 5;
  string organization_id = 6;
  string assignee_id = 7;
  string reporter_id = 8;
  google.protobuf.Timestamp due_at = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string status = 3;
  string priority = 4;
  string organization_id = 5;
  string assignee_id = 6;
  string reporter_id = 7;
  google.protobuf.Timestamp due_at = 8;
}

message GetTaskRequest {
  string id = 1;
}

message ListTasksRequest {
  string organization_id = 1;
  string assignee_id = 2;
  string reporter_id = 3;
  string status = 4;
  int32 page = 5;
  int32 limit = 6;
}

message ListTasksResponse {
  repeated Task items = 1;
}

message UpdateTaskRequest {
  string id = 1;
  google.protobuf.StringValue title = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.StringValue status = 4;
  google.protobuf.StringValue priority = 5;
  google.protobuf.StringValue organization_id = 6;
  google.protobuf.StringValue assignee_id = 7;
  google.protobuf.StringValue reporter_id = 8;
  google.protobuf.Timestamp due_at = 9;
}

message DeleteTaskRequest {
  string id = 1;
}
